--- a/no1.html
+++ b/no1.html
@@ -25,8 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Please think again! 🙄</h1>
-      <p>itni jaldi nahi matt bolo😥</p>
+      <h1>Please Socha Ekchoti! 🙄</h1>
+      <p>Sochera decision leu hai time xa 😥</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
