--- a/no2.html
+++ b/no2.html
@@ -28,8 +28,8 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Ek aur baar Soch lo! 😣</h1>
-      <p>kyu aisa kar rahi ho 😣</p>
+      <h1>kei xaina.. Feri socha na! 😣</h1>
+      <p>Aba chei Yes ma click gara hai 😁</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
