--- a/yes.html
+++ b/yes.html
@@ -26,7 +26,7 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Hehehehe, I knew it! Love you a lot 😘</h1>
+      <h1>Hahaha, Yo ta malai sanei dekhi tha thiyo timi malai man parauxau vanera 😁😘</h1>
     </div>
   </body>
 </html>
