--- a/no3.html
+++ b/no3.html
@@ -30,8 +30,9 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Baby Man jao na! Kitna bhav khaogi 😭</h1>
-      <p>bhut glt baat hai yaar😭</p>
+      <h1>Tait timi ni kati bhau khaki , Yes bhandeu hau aba ta 😭</h1>
+<br>
+      <p>Yesto arulai dukha deko ramaro haina ni😭</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
