--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>Do you love me? 🤗</h1>
-      <p>~Prajwal is all yours</p>
+      <p>~I'm is all yours Prashna babe😘</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
