--- a/no1.html
+++ b/no1.html
@@ -26,7 +26,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>Please Socha Ekchoti! 🙄</h1>
-      <p>Sochera decision leu hai time xa 😥</p>
+      <p>Sochera decision leu hai mero budi time xa 😥</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
